syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

enum Status {
  ACTIVE = 0;
  DE_ACTIVE = 1;
}

message Article {
  string id = 1;
  string title = 2;
  string content = 3;
  Status status = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Articles {
  repeated Article articles = 1;
}

message ArticleIdentity {
  string article_id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
}

service ArticleService {
  rpc getAllArticles (google.protobuf.Empty) returns (Articles) {}
  rpc addArticle (Article) returns (ArticleIdentity) {}
}
